<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default -->
    <string name="app_name">chupa</string>

    <!-- Word -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="logo">Logo</string>
    <string name="profile">Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="blur_image">Blur Image</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="male">Man</string>
    <string name="female">Woman</string>
    <string name="delete">Delete</string>
    <string name="re_send">Re-send</string>
    <string name="select">Select</string>
    <string name="settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="birth_of_year">Birth of Year</string>
    <string name="number_of_member">Number of Member</string>
    <string name="nick_name">Nick Name</string>
    <string name="drawer">Drawer</string>
    <string name="rotate">Rotate</string>
    <string name="take">take</string>
    <string name="send">send</string>
    <string name="dash">&#160;-&#160;</string>
    <string name="exit_square">Leave Ground</string>
    <string name="send_chupa">Send chupa</string>
    <string name="chupa">Chupa</string>
    <string name="chat_alarm">Chat Alarm</string>
    <string name="chupa_alarm">Chupa Alarm</string>
    <string name="player">Team</string>
    <string name="code">Code</string>
    <string name="shout">Shout</string>
    <string name="confirm">Confirm</string>
    <string name="hint">Hint</string>
    <string name="blank">Blank</string>
    <string name="fail">Fail</string>

    <!-- Sentence -->
    <string name="delete_profile_image_message">Do you want to make your profile as default?</string>
    <string name="min_nick_name_message">Please type in more than 1 letters.</string>
    <string name="max_nick_name_message">Please type in less then 16 letters.</string>
    <string name="bad_camera_message">Camera met error. Please try it again.</string>
    <string name="bad_nick_name_message">This is invalid nick name.</string>
    <string name="bad_enter_square_message">Entering the square met error. Please try it again.</string>
    <string name="bad_square_code_message">Square code is wrong. Please enter again.</string>
    <string name="basic_profile_complete_message">Did you enter your profile correctly? You can\'t change it afterward.</string>
    <string name="no_profile_picture_message">Please take a profile picture.</string>
    <string name="offline_message">Network access is unavailable. Please check the network status.</string>
    <string name="exit_square_message">leaves ground.</string>
    <string name="enter_square_message">enters ground.</string>
    <string name="behave_well_warning">You have a legal responsibility for any kinds of insult, abuse words.</string>
    <string name="exit_square_consent_message">Every chat and chupa you have will be deleted. Do you want to leave ground?</string>
    <string name="send_chupa_notification_title">sends you a chupa.</string>
    <string name="shout_notification_title">shouts.</string>
    <string name="forced_logout_title">You have been logout.</string>
    <string name="googe_play_services_title">Google Play Services</string>
    <string name="googe_play_services_message">You need to install Google Play Services to use Chupa.</string>
    <string name="update_app_title">Update App</string>
    <string name="update_app_message">New version found. Please update your App.</string>
    <string name="internet_not_connected_message">Internet is bad. Please check your network environments.</string>
    <string name="message_fail_message">Select action.</string>

    <!-- String Array -->

    <string-array name="profile_image_select_delete_string_array">
        <item>Album</item>
        <item>Camera</item>
        <item>Delete</item>
    </string-array>
    <string-array name="profile_image_select_string_array">
        <item>Album</item>
        <item>Camera</item>
    </string-array>
    <string-array name="square_tab_string_array">
        <item>chat</item>
        <item>chupa</item>
    </string-array>

</resources>