<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/square_drawer_participant_list_height"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/square_drawer_participant_list_left_margin"
        android:layout_marginRight="@dimen/square_drawer_participant_list_right_margin"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/drawer_user_pro_pic"
            android:layout_width="@dimen/square_drawer_participant_list_profile_width"
            android:layout_height="@dimen/square_drawer_participant_list_profile_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/drawer_user_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/square_drawer_participant_list_profile_nick_margin"
            android:layout_toRightOf="@+id/drawer_user_pro_pic"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:id="@+id/drawer_user_is_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/square_drawer_participant_list_nick_gender_margin"
            android:layout_toRightOf="@+id/drawer_user_nick_name"
            android:contentDescription="@string/gender" />

        <ImageButton
            android:id="@+id/drawer_user_chupa_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chupa"
            android:src="@drawable/sidebar_chupa" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_divider_height"
        android:layout_marginLeft="@dimen/square_drawer_participant_list_left_margin"
        android:layout_marginRight="@dimen/square_drawer_participant_list_right_margin"
        android:background="@color/line" />

</LinearLayout>