<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/profile_dialog_left_margin"
    android:paddingRight="@dimen/profile_dialog_right_margin"
    android:paddingTop="@dimen/profile_dialog_top_margin" >

    <ImageView
        android:id="@+id/profile_dialog_profile"
        android:layout_width="@dimen/profile_dialog_profile_width"
        android:layout_height="@dimen/profile_dialog_profile_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/profile_dialog_profile_nick_name_margin"
        android:contentDescription="@string/profile_image" />

    <ImageView
        android:id="@+id/profile_dialog_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_dialog_profile"
        android:layout_alignRight="@+id/profile_dialog_profile"
        android:contentDescription="@string/gender" />

    <TextView
        android:id="@+id/profile_dialog_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_dialog_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/profile_dialog_nick_name_info_margin"
        android:textSize="@dimen/font_x_large" />

    <LinearLayout
        android:id="@+id/profile_dialog_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_dialog_nick_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/profile_dialog_info_send_button_margin" >

        <TextView
            android:id="@+id/profile_dialog_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/profile_dialog_age_company_number_margin"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/profile_dialog_company_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/peoplenum"
            android:textSize="@dimen/font_medium" />
    </LinearLayout>

    <Button
        android:id="@+id/profile_dialog_send_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/profile_dialog_send_button_height"
        android:layout_below="@+id/profile_dialog_info_layout"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/send_chupa"
        android:textColor="@color/red"
        android:textSize="@dimen/font_large" />

</RelativeLayout>