<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/square_drawer_frag_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f4f4f4"
    android:clickable="true" >

    <ProgressBar
        android:id="@+id/square_drawer_frag_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/square_drawer_frag_exit_button_divider"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/square_drawer_frag_profile_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_bar_height"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/square_drawer_bar_left_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/my_profile"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/gray_tab_text_unselected" />
        </RelativeLayout>
        
        <View
        	android:id="@+id/square_drawer_frag_exit_button_divider"
        	android:layout_width="match_parent"
        	android:layout_height="@dimen/divider_height"
        	android:layout_above="@+id/square_drawer_frag_exit_button"
        	android:background="@color/gray_line" />

        <LinearLayout
            android:id="@+id/square_drawer_frag_profile_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_profile_height"
            android:background="@android:color/white"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/square_drawer_profile_left_margin" >

            <ImageView
                android:id="@+id/square_drawer_frag_profile_image"
                android:layout_width="@dimen/square_drawer_profile_circle_width"
                android:layout_height="@dimen/square_drawer_profile_circle_height"
                android:layout_marginRight="@dimen/square_drawer_profile_image_info_margin"
                android:contentDescription="@string/profile_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/square_drawer_frag_profile_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/square_drawer_profile_nick_name_bottom_margin"
                    android:textSize="@dimen/font_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center" >

                    <TextView
                        android:id="@+id/square_drawer_frag_profile_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/square_drawer_profile_age_gender_margin"
                        android:layout_marginLeft="@dimen/square_drawer_profile_age_left_margin"
                        android:textSize="@dimen/font_medium" />
                    
                    <LinearLayout 
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/square_drawer_profile_company_num_height"
                        android:background="@drawable/bg_sidebar_member" >
                        
	                    <ImageView
	                        android:id="@+id/square_drawer_frag_profile_gender"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_marginRight="@dimen/square_drawer_profile_gender_company_num_margin"
	                        android:contentDescription="@string/gender"
	                        android:layout_gravity="center" />
	
	                    <TextView
	                        android:id="@+id/square_drawer_frag_profile_company_num"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:textSize="@dimen/font_medium"
	                        android:gravity="center" />
	                 </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/square_drawer_frag_member_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/square_drawer_bar_height"
            android:background="@android:color/white"
            android:gravity="left|center"
            android:paddingLeft="@dimen/square_drawer_bar_left_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/square_drawer_member_bar_title_right_margin"
                android:text="@string/player"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/gray_tab_text_unselected" />
				
            <TextView
                android:id="@+id/square_drawer_frag_member_male_text"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginRight="@dimen/square_drawer_member_bar_gender_margin"
                android:background="@drawable/bg_sidebar_playernum_m"
                android:paddingLeft="@dimen/squre_drawer_playernum_margin"
                android:paddingRight="@dimen/squre_drawer_playernum_margin"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_medium" />

            <TextView
                android:id="@+id/square_drawer_frag_member_female_text"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:background="@drawable/bg_sidebar_playernum_w"
                android:paddingLeft="@dimen/squre_drawer_playernum_margin"
                android:paddingRight="@dimen/squre_drawer_playernum_margin"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_medium" />
        </LinearLayout>
        
        <View
        	android:id="@+id/square_drawer_frag_exit_button_divider"
        	android:layout_width="match_parent"
        	android:layout_height="@dimen/divider_height"
        	android:layout_above="@+id/square_drawer_frag_exit_button"
        	android:background="@color/gray_line" />

        <ListView
            android:id="@+id/square_drawer_frag_participant_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null" >
        </ListView>
    </LinearLayout>

    <View
        android:id="@+id/square_drawer_frag_exit_button_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_above="@+id/square_drawer_frag_exit_button"
        android:background="@color/gray_line" />

    <Button
        android:id="@+id/square_drawer_frag_exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:text="@string/exit_square"
        android:textColor="@color/red"
        android:textSize="@dimen/font_large" />

</RelativeLayout>